--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <div class="container">
     <h1>Would you go out on a date with me, Loelle? 💖</h1>
     <div class="button-container">
-      <button id="yesButton" onclick="window.location.href='/response.html'">Yes</button>
+      <button id="yesButton" onclick="window.location.href='response.html'">Yes</button>
       <button id="noButton" onclick="enlargeYesButton()">No</button>
     </div>
   </div>
