--- a/response.html
+++ b/response.html
@@ -83,7 +83,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Yay, Onelle said yes! 🎉</h1>
+    <h1>Yay, She said yes! 🎉</h1>
     <p>Susubukan kong sulitin ito, pangako. 💖</p>
     <p><a href="[your-contact-link]">Text me to plan our date!</a></p>
   </div>
