--- a/response.html
+++ b/response.html
@@ -61,7 +61,7 @@
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       max-width: 500px;
-      width: 90%; /* Ensure responsiveness */
+      width: 90%;
     }
     h1 {
       font-size: 2em;
@@ -71,21 +71,13 @@
       font-size: 1.2em;
       margin-bottom: 20px;
     }
-    a {
-      color: #4CAF50;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Yay, She said yes! 🎉</h1>
     <p>Susubukan kong sulitin ito, pangako. 💖</p>
-    <p><a href="[your-contact-link]">Text me to plan our date!</a></p>
+    <p>Text me to plan our date!</p>
   </div>
 </body>
 </html>
