--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Would you go out on a date with me, Loelle? 💖</h1>
+    <h1>On the Off chance that i might be a good guy, How about i take you out some time? 💖</h1>
     <div class="button-container">
       <button id="yesButton" onclick="window.location.href='response.html'">Yes</button>
       <button id="noButton" onclick="enlargeYesButton()">No</button>
