--- a/response.html
+++ b/response.html
@@ -75,9 +75,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Yay, She said yes! 🎉</h1>
-    <p>Susubukan kong sulitin ito, pangako. 💖</p>
-    <p>Text me to plan our date!</p>
+    <h1>Ngl, Did not think that would work 🎉</h1>
+    <p>Haven't thought this far ahead</p>
+    <p>Text me and i'll take care of the rest 💖</p>
   </div>
 </body>
 </html>
