--- a/index.html
+++ b/index.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -51,7 +12,7 @@
       justify-content: center;
       align-items: center;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #ff6f61, #ffb88c); /* Filipino sunset gradient */
+      background: linear-gradient(to bottom, #ff6f61, #ffb88c);
       color: #333;
       text-align: center;
     }
@@ -61,7 +22,7 @@
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       max-width: 500px;
-      width: 90%; /* Ensure responsiveness */
+      width: 90%;
     }
     h1 {
       font-size: 2em;
@@ -81,33 +42,60 @@
       transition: transform 0.3s;
     }
     #yesButton {
-      background-color: #4CAF50; /* Green for "Yes" */
+      background-color: #4CAF50;
       color: white;
     }
     #noButton {
-      background-color: #ff4444; /* Red for "No" */
+      background-color: #ff4444;
       color: white;
-    }
-    #yesButton:hover, #noButton:hover {
-      opacity: 0.9;
     }
   </style>
 </head>
+
 <body>
   <div class="container">
-    <h1>On the Off chance that i might be a good guy, How about i take you out some time? 💖</h1>
+    <h1 id="question">
+      On the off chance that I might be a good guy, how about I take you out some time? 💖
+    </h1>
+
     <div class="button-container">
-      <button id="yesButton" onclick="window.location.href='response.html'">Yes</button>
-      <button id="noButton" onclick="enlargeYesButton()">No</button>
+      <button id="yesButton" onclick="handleYes()">Yes</button>
+      <button id="noButton" onclick="handleNo()">No</button>
     </div>
   </div>
 
   <script>
+    let noClickCount = 0;
     let yesButtonScale = 1;
 
-    function enlargeYesButton() {
-      yesButtonScale += 0.2; // Increase size by 20%
-      document.getElementById('yesButton').style.transform = `scale(${yesButtonScale})`;
+    function handleNo() {
+      noClickCount++;
+
+      const question = document.getElementById("question");
+      const yesButton = document.getElementById("yesButton");
+
+      if (noClickCount === 1) {
+        question.textContent = "Are you sure? Let’s try that again.";
+      } 
+      else if (noClickCount === 2) {
+        question.textContent = "Hmm… we seem to be experiencing technical issues.";
+        yesButtonScale += 0.2;
+        yesButton.style.transform = `scale(${yesButtonScale})`;
+      } 
+      else if (noClickCount === 3) {
+        question.textContent = "3 times the charm? 😌";
+        yesButtonScale += 0.3;
+        yesButton.style.transform = `scale(${yesButtonScale})`;
+      }
+    }
+
+    function handleYes() {
+      // If they said no 3 times, send a flag to response.html
+      if (noClickCount >= 3) {
+        window.location.href = "response.html?lateYes=true";
+      } else {
+        window.location.href = "response.html";
+      }
     }
   </script>
 </body>
