--- a/response.html
+++ b/response.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -51,7 +12,7 @@
       justify-content: center;
       align-items: center;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #ff6f61, #ffb88c); /* Filipino sunset gradient */
+      background: linear-gradient(to bottom, #ff6f61, #ffb88c);
       color: #333;
       text-align: center;
     }
@@ -69,15 +30,32 @@
     }
     p {
       font-size: 1.2em;
-      margin-bottom: 20px;
     }
   </style>
 </head>
+
 <body>
   <div class="container">
-    <h1>Ngl, Did not think that would work 🎉</h1>
-    <p>Haven't thought this far ahead</p>
-    <p>Text me and i'll take care of the rest 💖</p>
+    <h1 id="title"></h1>
+    <p id="message"></p>
   </div>
+
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const lateYes = params.get("lateYes");
+
+    const title = document.getElementById("title");
+    const message = document.getElementById("message");
+
+    if (lateYes) {
+      title.textContent = "There ya go 😄";
+      message.textContent =
+        "Glad we got there in the end. Feel free to text me and I’ll take care of the rest 💖";
+    } else {
+      title.textContent = "Ngl, did not think that would work 🎉";
+      message.textContent =
+        "Text me and I’ll take care of the rest 💖";
+    }
+  </script>
 </body>
 </html>
