--- a/response.html
+++ b/response.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Date Accepted</title>
+
   <style>
     body {
       margin: 0;
@@ -16,20 +17,24 @@
       color: #333;
       text-align: center;
     }
+
     .container {
-      padding: 20px;
-      background: rgba(255, 255, 255, 0.9);
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      max-width: 500px;
+      padding: 25px;
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 12px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.25);
+      max-width: 520px;
       width: 90%;
     }
+
     h1 {
       font-size: 2em;
-      margin-bottom: 10px;
+      margin-bottom: 12px;
     }
+
     p {
       font-size: 1.2em;
+      margin: 10px 0;
     }
   </style>
 </head>
